--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,11 +10,15 @@ android {
     buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "com.example.glowroadtask"
-        minSdkVersion 26
+        minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     buildTypes {
         release {
@@ -26,7 +30,7 @@ android {
 
 def retrofitversion='2.3.0'
 def mockitoVersion="2.11.0"
-def daggerVersion='2.19'
+def daggerVersion='2.14.1'
 def rxJavaVersion='2.1.1'
 
 dependencies {
@@ -36,12 +40,14 @@ dependencies {
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitversion"
     implementation "com.google.dagger:dagger:$daggerVersion"
     implementation "com.google.dagger:dagger-android-support:$daggerVersion"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     kapt "com.google.dagger:dagger-compiler:$daggerVersion"
     kapt "com.google.dagger:dagger-android-processor:$daggerVersion"
     implementation "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
     implementation "io.reactivex.rxjava2:rxandroid:$rxJavaVersion"
     implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.14.1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
