--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,8 @@ android {
 def retrofitversion='2.3.0'
 def mockitoVersion="2.11.0"
 def daggerVersion='2.14.1'
+def glideVersion='4.10.0'
+
 def rxJavaVersion='2.1.1'
 
 dependencies {
@@ -42,6 +44,8 @@ dependencies {
     implementation "com.google.dagger:dagger-android-support:$daggerVersion"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
+
     kapt "com.google.dagger:dagger-compiler:$daggerVersion"
     kapt "com.google.dagger:dagger-android-processor:$daggerVersion"
     implementation "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
